# Tritium3D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
apps/: CMakeLists.txt
apps/FallingSquares/: CMakeLists.txt  Main.cpp  Square.cpp  Square.hpp
apps/FallingSquares/Application/: FallingSquaresScene.cpp  FallingSquaresScene.hpp  Gravity.hpp  Rigidbody.hpp
apps/FallingSquares/Resources/Shaders/: default.vert
apps/RenderingBenchmark/: CMakeLists.txt  Config.hpp  Main.cpp  Settings.hpp
apps/RenderingBenchmark/Application/: BoxContainerSystem.hpp  DefaultScene.cpp  DefaultScene.hpp  Rigidbody.hpp
apps/RenderingBenchmark/Components/: Rigidbody.hpp  Tags.hpp
apps/RenderingBenchmark/Components/Scripts/: CameraStatsUI.cpp  CameraStatsUI.hpp  FpsStatsUI.cpp  FpsStatsUI.hpp
apps/RenderingBenchmark/Resources/Shaders/: circles.frag  circles.geom  circles.vert  default.vert  geometry.frag  geometry.geom  geometry.vert  instanced.frag  instanced.vert  screen.frag  screen.vert  text.frag  text.vert
apps/RenderingBenchmark/Scenes/: CircleCollisionsScene.cpp  CircleCollisionsScene.hpp  CubeScene.cpp  CubeScene.hpp  DefaultScene.cpp  DefaultScene.hpp  ParticlesBoxScene.cpp  ParticlesBoxScene.hpp  ParticlesCollisionsScene.cpp  ParticlesCollisionsScene.hpp  TestScene.cpp  TestScene.hpp
apps/RenderingBenchmark/Systems/: BoxContainerSystem.cpp  BoxContainerSystem.hpp  CirclesRenderSystem.hpp  CubeRenderSystem.hpp  FpsDisplaySystem.cpp  FpsDisplaySystem.hpp
apps/RenderingBenchmark/inc/RenderingBenchmark/: Config.hpp
apps/RenderingBenchmark/inc/RenderingBenchmark/Scenes/: DefaultScene.hpp
apps/RenderingBenchmark/inc/RenderingBenchmark/Systems/: BoxContainerSystem.hpp
apps/RenderingBenchmark/src/RenderingBenchmark/: Main.cpp
apps/RenderingBenchmark/src/RenderingBenchmark/Scenes/: DefaultScene.cpp
apps/Square/: CMakeLists.txt  Square.cpp
apps/Triangle/: CMakeLists.txt  Triangle.cpp
apps/Triangle/Resources/Shaders/: default.vert
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
inc/Tritium3D/Input/: KeyState.hpp  Keyboard.hpp
inc/Tritium3D/Rendering/: Renderer.hpp  Shader.hpp
inc/Tritium3D/Rendering/Renderables/: Line.hpp  Mesh.hpp  Renderable.hpp
inc/Tritium3D/UI/: Window.hpp  WindowManager.hpp
inc/TritiumEngine/Core/: Application.hpp  NativeScript.hpp  ResourceLoader.hpp  ResourceLoaderFactory.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  Scriptable.hpp  System.hpp  Tag.hpp  Transform.hpp
inc/TritiumEngine/Core/Components/: Rigidbody.hpp  Transform.hpp
inc/TritiumEngine/Entities/: Entity.hpp  World.hpp
inc/TritiumEngine/Input/: Cursor.hpp  InputManager.hpp  KeyState.hpp  Keyboard.hpp  Mouse.hpp
inc/TritiumEngine/Physics/: Collider.hpp
inc/TritiumEngine/Physics/Components/: AABB.hpp
inc/TritiumEngine/Rendering/: BlendOptions.hpp  Camera.hpp  Color.hpp  ColorGradient.hpp  Cursor.hpp  InstancedRenderSystem.hpp  InstancedRenderable.hpp  Material.hpp  Model.hpp  Primitives.hpp  RenderData.hpp  RenderSettings.hpp  RenderSystem.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  ShaderCode.hpp  ShaderLoader.hpp  ShaderLoaderFactory.hpp  ShaderManager.hpp  StandardRenderSystem.hpp  Window.hpp
inc/TritiumEngine/Rendering/Components/: Camera.hpp  Color.hpp  FrameBuffer.hpp  InstancedRenderable.hpp  Renderable.hpp  Texture.hpp
inc/TritiumEngine/Rendering/Renderables/: Line.hpp  Mesh.hpp  Renderable.hpp
inc/TritiumEngine/Rendering/Systems/: InstancedRenderSystem.hpp  RenderSystem.hpp  StandardRenderSystem.hpp
inc/TritiumEngine/Rendering/TextRendering/: Font.hpp  FontLoader.hpp  FontLoaderFactory.hpp  Text.hpp  TextRenderSystem.hpp
inc/TritiumEngine/Rendering/TextRendering/Components/: Text.hpp
inc/TritiumEngine/Rendering/TextRendering/Systems/: TextRenderSystem.hpp
inc/TritiumEngine/UI/: Window.hpp  WindowManager.hpp
inc/TritiumEngine/Utilities/: CameraController.hpp  ColorUtils.hpp  EnumUtils.hpp  Logger.hpp  Random.hpp  Timer.hpp
inc/TritiumEngine/Utilities/Random/: GridDistribution.hpp  Position.hpp  Random.hpp
inc/TritiumEngine/Utilities/Scripts/: CameraStatsUI.hpp  FpsStatsUI.hpp
src/Tritium3D/Input/: KeyState.cpp  Keyboard.cpp
src/Tritium3D/Rendering/: Renderer.cpp  Shader.cpp
src/Tritium3D/Rendering/Renderables/: Line.cpp  Mesh.cpp
src/Tritium3D/UI/: Window.cpp
src/TritiumEngine/Core/: Application.cpp  Scene.cpp  SceneManager.cpp  Transform.cpp
src/TritiumEngine/Core/Components/: Transform.cpp
src/TritiumEngine/Entities/: World.cpp
src/TritiumEngine/Input/: InputManager.cpp  KeyState.cpp  Keyboard.cpp
src/TritiumEngine/Rendering/: Camera.cpp  ColorGradient.cpp  InstancedRenderable.cpp  RenderSystem.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  ShaderLoader.cpp  ShaderLoaderFactory.cpp  ShaderManager.cpp  StandardRenderSystem.cpp  Window.cpp
src/TritiumEngine/Rendering/Components/: FrameBuffer.cpp  InstancedRenderable.cpp  Renderable.cpp  Texture.cpp
src/TritiumEngine/Rendering/Renderables/: Line.cpp  Mesh.cpp
src/TritiumEngine/Rendering/TextRendering/: FontLoader.cpp  FontLoaderFactory.cpp  Text.cpp  TextRenderSystem.cpp
src/TritiumEngine/Rendering/TextRendering/Components/: Text.cpp
src/TritiumEngine/UI/: Window.cpp
src/TritiumEngine/Utilities/: CameraController.cpp  Timer.cpp
src/TritiumEngine/Utilities/Scripts/: CameraStatsUI.cpp  FpsStatsUI.cpp
